@@ -5,7 +5,7 @@ It was downloaded from http://akregator.sourceforge.net/
 
 Upstream Author: Stanislav Karchebny <stanislav.karchebny@kdemail.net>
 
-Copyright: GNU GPL Version 2
+Copyright: GNU GPL
 
 Copyright (c) 2001-2004 Frerich Raabe <raabe@kde.org>
 Copyright (c) 2003 Georg Robbers <Georg.Robbers@urz.uni-hd.de>
